# vnumpy

./: MANIFEST.in  README.md  pyproject.toml  setup.py
src/vnumpy/: v3d.py
vnumpy/: v3d.py
vnumpy/shaders/: frag.spv  shader.frag  shader.vert  vert.spv
